criação site index e estilos

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Brothers Cortes</title>
 </head>
 <body>
@@ -11,19 +12,25 @@
         <h1>Brother's Cortes</h1>
         <h2>Barber Shop</h2>
         <menu>
-           <a href=""></a>
+           <a href="">Início</a>
+           <a href="">Contato</a>
+           <a href="">Termos de Uso!</a>
         </menu>
     </header>
     <main>
         <article>
             foto
-            <section>
-                <h2>Nossas Redes Sociais</h2>
-                <a href=""><img src="" alt=""><img src="" alt=""></a>
-            </section>
             <h2>Sobre Nós!</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A, ut? Consequatur repudiandae aspernatur porro ipsum sint voluptates aperiam. Quibusdam id quos assumenda laudantium aperiam quam illum libero consectetur accusamus. Sunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quaerat alias velit labore temporibus quasi sit aut, nesciunt adipisci fugiat delectus accusantium neque quas, totam excepturi quos. Hic, nostrum distinctio.</p>
-            <h2>Onde ficamos ?</h2>
+            <section id="redes-sociais">
+                <h2>Nossas Redes Sociais</h2>
+                <a href="index.html"><img src="" alt=""><img src="imagens/logo-home.jpg" alt=""></a>
+                <a href="https://www.instagram.com/brotherscortes_/" target="_blank"><img src="imagens/logo-instagram.jpg" alt="" ></a>
+            </section>
+            <map name="Brother-Cortes">
+                <h2>Onde ficamos ?</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14616.283328133584!2d-46.76103933139688!3d-23.673424807486338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce52288e53c177%3A0xe293867e64e761cd!2sRua%20Otoniel%20Felipe%20Marques%2C%2042%20-%20Jardim%20Mazza%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2005832-340!5e0!3m2!1spt-BR!2sbr!4v1683227015357!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </map>
         </article>
     </main>
     <footer>
