--- a/index.html
+++ b/index.html
@@ -4,37 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/favcon.png" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>Brothers Cortes</title>
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Brother's Cortes</h1>
         <h2>Barber Shop</h2>
-        <menu>
-           <a href="">Início</a>
-           <a href="">Contato</a>
-           <a href="">Termos de Uso!</a>
+        <span id="burguer"  class="material-icons" onclick="clickMenu()">menu</span>
+        <menu id="itens">
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="#">Serviços</a></li>
+                <li><a href="">Contatos</a></li>
+                <li><a href="">Politica de Privacidade</a></li>
+            </ul>
         </menu>
     </header>
     <main>
         <article>
-            foto
             <h2>Sobre Nós!</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A, ut? Consequatur repudiandae aspernatur porro ipsum sint voluptates aperiam. Quibusdam id quos assumenda laudantium aperiam quam illum libero consectetur accusamus. Sunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quaerat alias velit labore temporibus quasi sit aut, nesciunt adipisci fugiat delectus accusantium neque quas, totam excepturi quos. Hic, nostrum distinctio.</p>
+            <section class="imagem" id="img01">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A, ut? Consequatur repudiandae aspernatur porro ipsum sint voluptates aperiam. Quibusdam id quos assumenda laudantium aperiam quam illum libero consectetur accusamus. Sunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quaerat alias velit labore temporibus quasi sit aut, nesciunt adipisci fugiat delectus accusantium neque quas, totam excepturi quos. Hic, nostrum distinctio.</p>
+            </section>
             <section id="redes-sociais">
                 <h2>Nossas Redes Sociais</h2>
-                <a href="index.html"><img src="" alt=""><img src="imagens/logo-home.jpg" alt=""></a>
                 <a href="https://www.instagram.com/brotherscortes_/" target="_blank"><img src="imagens/logo-instagram.jpg" alt="" ></a>
             </section>
-            <map name="Brother-Cortes">
-                <h2>Onde ficamos ?</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14616.283328133584!2d-46.76103933139688!3d-23.673424807486338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce52288e53c177%3A0xe293867e64e761cd!2sRua%20Otoniel%20Felipe%20Marques%2C%2042%20-%20Jardim%20Mazza%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2005832-340!5e0!3m2!1spt-BR!2sbr!4v1683227015357!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </map>
+            <div div="map">
+                <map name="Brother-Cortes">
+                    <h2>Onde ficamos ?</h2>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14616.283328133584!2d-46.76103933139688!3d-23.673424807486338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce52288e53c177%3A0xe293867e64e761cd!2sRua%20Otoniel%20Felipe%20Marques%2C%2042%20-%20Jardim%20Mazza%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2005832-340!5e0!3m2!1spt-BR!2sbr!4v1683227015357!5m2!1spt-BR!2sbr" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><br>
+                    <span>Rua Otoniel Felipe Marques, 42 - Jardim Mazza, São Paulo - SP, 05832-340</span>
+                </map>
+            </div>
         </article>
     </main>
     <footer>
-
+        <p>Criado Por <a href="">Felipe Korhonnen</a> Para Brother Cortes 2018-2023</p>
     </footer>
+    <script>
+        function mudouTamanho() {
+            if (window.innerWidth >= 992) {
+                intens.style.display = 'block'
+            } else {
+                intens.style.display = 'none'
+            }
+        }
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
