--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </header>
     <main>
         <article>
-            <h2>Sobre Nós!</h2>
+            <h1>Sobre Nós!</h1>
             <section class="imagem" id="img01">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A, ut? Consequatur repudiandae aspernatur porro ipsum sint voluptates aperiam. Quibusdam id quos assumenda laudantium aperiam quam illum libero consectetur accusamus. Sunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quaerat alias velit labore temporibus quasi sit aut, nesciunt adipisci fugiat delectus accusantium neque quas, totam excepturi quos. Hic, nostrum distinctio.</p>
+                <p>Bem-vindo ao mundo da Brother Cortes, a barbearia que é muito mais do que apenas um lugar para cortar o cabelo. Aqui, você encontrará uma atmosfera descontraída e amigável que combina perfeitamente com o estilo clássico e moderno que estamos trazendo para o mercado.</p>
             </section>
             <section id="redes-sociais">
                 <h2>Nossas Redes Sociais</h2>
