--- a/trabalhosfeitos/trabalhos.html
+++ b/trabalhosfeitos/trabalhos.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="/estilos/media-query">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
     <title>trabalhos</title>
 </head>
 <body>
+    <header>
+        <h1>Brother's Cortes</h1>
+        <h2>Barber Shop</h2>
+        <span id="burguer"  class="material-icons" onclick="clickMenu()">menu</span>
+        <menu id="itens">
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="trabalhosfeitos/trabalhos.html">Serviços</a></li>
+                <li><a href="">Contatos</a></li>
+                <li><a href="termosdeuso/termos.html">Termos de Uso</a></li>
+            </ul>
+        </menu>
+    </header>
     <main>
         <h1>Cortes Realizados</h1>
         <article>
@@ -17,5 +33,21 @@
     <footer>
         <p>Criado Por <a href="">Felipe Korhonnen</a> Para Brother Cortes 2018-2023</p>
     </footer>
+    <script>
+        function mudouTamanho() {
+            if (window.innerWidth >= 992) {
+                intens.style.display = 'block'
+            } else {
+                intens.style.display = 'none'
+            }
+        }
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
