--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <menu id="itens">
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="#">Serviços</a></li>
+                <li><a href="trabalhosfeitos/trabalhos.html">Serviços</a></li>
                 <li><a href="">Contatos</a></li>
-                <li><a href="">Politica de Privacidade</a></li>
+                <li><a href="termosdeuso/termos.html">Termos de Uso</a></li>
             </ul>
         </menu>
     </header>
