--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </article>
     </main>
     <footer>
-        <p>Criado Por <a href="">Felipe Korhonnen</a> Para Brother Cortes 2018-2023</p>
+        <p>Criado Por <a href="">Felipe Korhonnen</a> Para Brother Cortes 2018-2023© </p>
     </footer>
     <script>
         function mudouTamanho() {
