--- a/trabalhosfeitos/trabalhos.html
+++ b/trabalhosfeitos/trabalhos.html
@@ -17,7 +17,7 @@
         <span id="burguer"  class="material-icons" onclick="clickMenu()">menu</span>
         <menu id="itens">
             <ul>
-                <li><a href="index.html">Início</a></li>
+                <li><a href="../index.html">Início</a></li>
                 <li><a href="trabalhosfeitos/trabalhos.html">Serviços</a></li>
                 <li><a href="">Contatos</a></li>
                 <li><a href="termosdeuso/termos.html">Termos de Uso</a></li>
