atualizei contatos fotos links imagens e adicionei estilo na pag contatos

--- a/contato/contato.html
+++ b/contato/contato.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>Contatos</title>
 </head>
 <body>
@@ -13,19 +16,27 @@
         <menu id="itens">
             <ul>
                 <li><a href="../index.html">Início</a></li>
-                <li><a href="trabalhosfeitos/trabalhos.html">Serviços</a></li>
-                <li><a href="">Contatos</a></li>
-                <li><a href="termosdeuso/termos.html">Termos de Uso</a></li>
+                <li><a href="../trabalhosfeitos/trabalhos.html">Serviços</a></li>
+                <li><a href="contato.html">Contatos</a></li>
+                <li><a href="../termosdeuso/termos.html">Termos de Uso</a></li>
             </ul>
         </menu>
     </header>
     <main>
         <article>
-            <ul>
-                <li><p>Gustavo<img src="" alt=""></p></li>
-                <li><p>Gabriel<img src="" alt=""></p></li>
-                <li><p>Lucas<img src="" alt=""></p></li>
-                <li><p>Rafael<img src="" alt=""></p></li>
+            <aside>
+                <ul type="none">
+                    <h2></h2>
+                    <li><img src="../fotodosprofissionais/gustavo.jpg" alt=""></li>
+                    <h2>Gustavo</h2>
+                    <h2>WhatsApp:<a href=""></a></h2>
+                    <li><img src="../fotodosprofissionais/gabriel.jpg" alt=""></li>
+                    <h2>Gabriel</h2>
+                    <h2>WhatsApp:<a href=""></a></h2>
+                    <li><img src="../fotodosprofissionais/rafael.jpg" alt=""></li>
+                    <h2>Rafael</h2>
+                    <h2>WhatsApp:<a href=""></a></h2>
+            </aside>
             </ul>
         </article>
     </main>
