--- a/termosdeuso/termos.html
+++ b/termosdeuso/termos.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>Termos de Uso</title>
 </head>
 <body>
@@ -16,8 +18,8 @@
         <menu id="itens">
             <ul>
                 <li><a href="../index.html">Início</a></li>
-                <li><a href="trabalhosfeitos/trabalhos.html">Serviços</a></li>
-                <li><a href="">Contatos</a></li>
+                <li><a href="../trabalhosfeitos/trabalhos.html">Serviços</a></li>
+                <li><a href="../contato/contato.html">Contatos</a></li>
                 <li><a href="termosdeuso/termos.html">Termos de Uso</a></li>
             </ul>
         </menu>
