--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="trabalhosfeitos/trabalhos.html">Serviços</a></li>
-                <li><a href="">Contatos</a></li>
+                <li><a href="contato/contato.html">Contatos</a></li>
                 <li><a href="termosdeuso/termos.html">Termos de Uso</a></li>
             </ul>
         </menu>
