--- a/trabalhosfeitos/trabalhos.html
+++ b/trabalhosfeitos/trabalhos.html
@@ -19,8 +19,8 @@
             <ul>
                 <li><a href="../index.html">Início</a></li>
                 <li><a href="trabalhosfeitos/trabalhos.html">Serviços</a></li>
-                <li><a href="">Contatos</a></li>
-                <li><a href="termosdeuso/termos.html">Termos de Uso</a></li>
+                <li><a href="../contato/contato.html">Contatos</a></li>
+                <li><a href="../termosdeuso/termos.html">Termos de Uso</a></li>
             </ul>
         </menu>
     </header>
